--- a/css/style.css
+++ b/css/style.css
@@ -1141,9 +1141,11 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin-bottom: 20px;
 }
 
-#contact .form #sendmessage {
-  color: #18d26e;
+#contact .gform #sendmessage {
+  color: #fff;
+  background-color: #18d26e;
   border: 1px solid #18d26e;
+  border-radius: 20px;
   display: none;
   text-align: center;
   padding: 15px;
@@ -1151,23 +1153,25 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin-bottom: 15px;
 }
 
-#contact .form #errormessage {
-  color: red;
+#contact .gform #errormessage {
+  color: #fff;
+  background-color: red;
   display: none;
   border: 1px solid red;
+  border-radius: 20px;
   text-align: center;
   padding: 15px;
   font-weight: 600;
   margin-bottom: 15px;
 }
 
-#contact .form #sendmessage.show,
-#contact .form #errormessage.show,
-#contact .form .show {
+#contact .gform #sendmessage.show,
+#contact .gform #errormessage.show,
+#contact .gform .show {
   display: block;
 }
 
-#contact .form .validation {
+#contact .gform .validation {
   color: red;
   display: none;
   margin: 0 0 20px;
@@ -1175,15 +1179,15 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-size: 13px;
 }
 
-#contact .form input,
-#contact .form textarea {
+#contact .gform input,
+#contact .gform textarea {
   padding: 10px 14px;
   border-radius: 0;
   box-shadow: none;
   font-size: 15px;
 }
 
-#contact .form button[type="submit"] {
+#contact .gform button[type="submit"] {
   background: #18d26e;
   border: 0;
   padding: 10px 30px;
@@ -1192,7 +1196,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   cursor: pointer;
 }
 
-#contact .form button[type="submit"]:hover {
+#contact .gform button[type="submit"]:hover {
   background: #13a456;
 }
 
